kubernetes-templates/cloud9/0/cloud9-sdk-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "${cloud9_name}"
  namespace: "${cloud9_namespace}"
  labels:
    name: "${cloud9_name}"
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: "cloud9-port"
    protocol: "TCP"
  selector:
    name: "${cloud9_name}"
