kubernetes-templates/cloud9/0/cloud9-sdk-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${cloud9_name}
  namespace: ${cloud9_namespace}
spec:
  rules:
  - host: ${cloud9_name}.${cloud9_domain}
    http:
      paths:
      - backend:
          serviceName: ${cloud9_name}
          servicePort: 8080
